src/test/ui/issues/issue-12470.nll.stderr
error[E0515]: cannot return value referencing local data `*b`
  --> $DIR/issue-12470.rs:29:5
   |
LL |     let bb: &B = &*b;    //~ ERROR does not live long enough
   |                  --- `*b` is borrowed here
LL |     make_a(bb)
   |     ^^^^^^^^^^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
